--- a/app/index.html
+++ b/app/index.html
@@ -35,13 +35,13 @@
   </head>
 
   <body>
-    <div id="appContainer">
+    <div class="application">
 
-    </div> <!-- end appContainer -->
+    </div> <!-- end application -->
     <!-- build:js -->
     <script src="../jspm_packages/system.js"></script>
     <script src="scripts/config.js"></script>
-    <script>System.import('app');</script>
+    <script>System.import('tada');</script>
     <!-- endbuild -->
   </body>
 </html>
